--- a/package.json
+++ b/package.json
@@ -15,7 +15,8 @@
     "@strapi/plugin-users-permissions": "4.3.6",
     "@strapi/strapi": "4.3.6",
     "better-sqlite3": "7.4.6",
-    "strapi-plugin-entity-relationship-chart": "^4.1.0"
+    "strapi-plugin-entity-relationship-chart": "^4.1.0",
+    "webpack": "^5.74.0"
   },
   "author": {
     "name": "A Strapi developer"
